feat: Fix WebviewViewProvider - extension is now working
- Add 'webview' type in views section of package.json
- Add an icon for the ClickCmds view
- Remove setTimeout from WebviewViewProvider registration
- Add detailed logs for debugging
- Fix FileSystemWatcher with explicit parameters
- WebviewView now appears in the sidebar with functional buttons
- Commands are now executed correctly in the terminal
- Temporary overrides system is operational

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
       "clickcmds": [
         {
           "id": "clickcmds.view",
-          "name": "ClickCmds"
+          "name": "ClickCmds",
+          "type": "webview",
+          "icon": "$(terminal)"
         }
       ]
     },
