feat: Add command via Command Palette
- New command 'ClickCmds: Run Command via Terminal'
- Allows running .cmmds commands via Ctrl+Shift+P
- QuickPick for selecting available commands
- Support for running a specific command by name
- Public method `runCommandByName` in ClickCmdsViewProvider

Features:
- Run without a parameter: shows a list of commands to choose from
- Run with a parameter: executes a specific command
- Integration with effective configuration (including overrides)
- Validation of existing commands

Functionality to explore future CLI alternatives.

--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
         "command": "clickcmds.clearTemporary",
         "title": "ClickCmds: Limpar Configurações Temporárias",
         "icon": "$(clear-all)"
+      },
+      {
+        "command": "clickcmds.runCommand",
+        "title": "ClickCmds: Executar Comando via Terminal"
       }
     ],
     "menus": {
